# misccode

./: README.md
lastKLines/: CMakeLists.txt  PrintFile.cpp  PrintFile.h  main.cpp  test1_last3lines.txt  testPrintFile.cpp
